[tool.poetry]
name = "replicant-engine"
version = "0.1.0"
description = ""
authors = ["Alex Kwiatkowski <alex+git@fremantle.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ploomber = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
